--- a/lib/win32/Makefile.win32.cygwin
+++ b/lib/win32/Makefile.win32.cygwin
@@ -3,6 +3,8 @@
 #-------------------------------------------------------------------------
 # To compile GLFW using this makefile, run:
 #  make -f Makefile.win32.cygwin
+#-------------------------------------------------------------------------
+# $Id: Makefile.win32.cygwin,v 1.2 2003-02-02 21:18:49 marcus256 Exp $
 ##########################################################################
 
 ##########################################################################
