--- a/lib/win32/Makefile.win32.msvc
+++ b/lib/win32/Makefile.win32.msvc
@@ -3,6 +3,8 @@
 #-------------------------------------------------------------------------
 # To compile GLFW using this makefile, run:
 #  nmake -f Makefile.win32.msvc
+#-------------------------------------------------------------------------
+# $Id: Makefile.win32.msvc,v 1.2 2003-02-02 21:18:48 marcus256 Exp $
 ##########################################################################
 
 ##########################################################################
