--- a/lib/amigaos/Makefile.amigaos.vbcc
+++ b/lib/amigaos/Makefile.amigaos.vbcc
@@ -3,6 +3,8 @@
 #-------------------------------------------------------------------------
 # To compile GLFW using this makefile, run:
 #  make -f Makefile.amigaos.vbcc
+#-------------------------------------------------------------------------
+# $Id: Makefile.amigaos.vbcc,v 1.2 2003-02-02 22:23:09 marcus256 Exp $
 ##########################################################################
 
 ##########################################################################
@@ -31,8 +33,8 @@ CFLAGS_SPEED = -c -I. -I/ -c99 -cpu=68020 -fpu=68881 -O1
 ##########################################################################
 # Library builder settings
 ##########################################################################
-MKLIB    =
-LIBFLAGS =
+MKLIB    = join
+LIBFLAGS = as
 
 
 ##########################################################################
@@ -64,8 +66,7 @@ OBJS = \
 # Rule for building library
 ##########################################################################
 glfw.lib: $(OBJS)
-	join $(OBJS) as $@
-#	$(MKLIB) $(LIBFLAGS) $@ $(OBJS)
+	$(MKLIB) $(OBJS) $(LIBFLAGS) $@
 
 
 ##########################################################################
