--- a/examples/Makefile.win32.mgw
+++ b/examples/Makefile.win32.mgw
@@ -2,7 +2,9 @@
 # Makefile for GLFW test programs on Windows using MinGW32.
 #-------------------------------------------------------------------------
 # To compile the test files using this makefile, run:
-#  make -f Makefile.mgw
+#  make -f Makefile.win32.mgw
+#-------------------------------------------------------------------------
+# $Id: Makefile.win32.mgw,v 1.2 2003-02-02 22:28:25 marcus256 Exp $
 ##########################################################################
 
 # Compiler settings
