--- a/lib/macosx/Makefile.macosx.gcc
+++ b/lib/macosx/Makefile.macosx.gcc
@@ -15,7 +15,6 @@ default: libglfw.a
 # Compiler settings
 ##########################################################################
 CC           = gcc
-OBJCC        = gcc
 CFLAGS       = -c -I. -I.. -Wall -Os
 
 # Some modules should be optimized for speed (e.g. image decoding)
@@ -98,26 +97,26 @@ time.o: ../time.c ../internal.h platform.h
 window.o: ../window.c ../internal.h platform.h
 	$(CC) $(CFLAGS) -o $@ ../window.c
 
-macosx_enable.o: macosx_enable.m ../internal.h platform.h
-	$(OBJCC) $(CFLAGS) -o $@ macosx_enable.m
+macosx_enable.o: macosx_enable.c ../internal.h platform.h
+	$(CC) $(CFLAGS) -o $@ macosx_enable.c
 
-macosx_fullscreen.o: macosx_fullscreen.m ../internal.h platform.h
-	$(OBJCC) $(CFLAGS) -o $@ macosx_fullscreen.m
+macosx_fullscreen.o: macosx_fullscreen.c ../internal.h platform.h
+	$(CC) $(CFLAGS) -o $@ macosx_fullscreen.c
 
-macosx_glext.o: macosx_glext.m ../internal.h platform.h
-	$(OBJCC) $(CFLAGS) -o $@ macosx_glext.m
+macosx_glext.o: macosx_glext.c ../internal.h platform.h
+	$(CC) $(CFLAGS) -o $@ macosx_glext.c
 
-macosx_init.o: macosx_init.m ../internal.h platform.h
-	$(OBJCC) $(CFLAGS) -o $@ macosx_init.m
+macosx_init.o: macosx_init.c ../internal.h platform.h
+	$(CC) $(CFLAGS) -o $@ macosx_init.c
 
-macosx_joystick.o: macosx_joystick.m ../internal.h platform.h
-	$(OBJCC) $(CFLAGS) -o $@ macosx_joystick.m
+macosx_joystick.o: macosx_joystick.c ../internal.h platform.h
+	$(CC) $(CFLAGS) -o $@ macosx_joystick.c
 
-macosx_thread.o: macosx_thread.m ../internal.h platform.h
-	$(OBJCC) $(CFLAGS) -o $@ macosx_thread.m
+macosx_thread.o: macosx_thread.c ../internal.h platform.h
+	$(CC) $(CFLAGS) -o $@ macosx_thread.c
 
-macosx_time.o: macosx_time.m ../internal.h platform.h
-	$(OBJCC) $(CFLAGS) -o $@ macosx_time.m
+macosx_time.o: macosx_time.c ../internal.h platform.h
+	$(CC) $(CFLAGS) -o $@ macosx_time.c
 
-macosx_window.o: macosx_window.m ../internal.h platform.h
-	$(OBJCC) $(CFLAGS) -o $@ macosx_window.m
+macosx_window.o: macosx_window.c ../internal.h platform.h
+	$(CC) $(CFLAGS) -o $@ macosx_window.c
