Added running ranlib on library.

--- a/lib/macosx/Makefile.macosx.gcc
+++ b/lib/macosx/Makefile.macosx.gcc
@@ -27,6 +27,7 @@ CFLAGS_SPEED = -c -I. -I.. -Wall -O3 -ffast-math
 # Static library
 MKLIB     = ar
 LIBFLAGS  = -rcs
+RANLIB    = ranlib
 
 
 ##########################################################################
@@ -59,6 +60,7 @@ OBJS = \
 ##########################################################################
 libglfw.a: $(OBJS)
 	$(MKLIB) $(LIBFLAGS) $@ $(OBJS)
+	$(RANLIB) $@
 
 
 ##########################################################################
