Changed header of file.

--- a/lib/macosx/Makefile.macosx.gcc
+++ b/lib/macosx/Makefile.macosx.gcc
@@ -3,6 +3,8 @@
 #-------------------------------------------------------------------------
 # To compile GLFW using this makefile, run:
 #  make -f Makefile.macosx.gcc
+#-------------------------------------------------------------------------
+# $Id: Makefile.macosx.gcc,v 1.4 2003-10-20 23:02:12 marcus256 Exp $
 ##########################################################################
 
 ##########################################################################
