--- a/support/d/examples/Makefile
+++ b/support/d/examples/Makefile
@@ -4,7 +4,7 @@
 # Digital Mars C/C++ compiler/linker lib folder (dm\lib) before compiling
 # the programs.
 ##########################################################################
-# $Id: Makefile,v 1.1 2004-03-04 21:33:20 marcus256 Exp $
+# $Id: Makefile,v 1.2 2004-04-05 19:19:07 marcus256 Exp $
 ##########################################################################
 
 DC     = dmd
@@ -13,15 +13,24 @@ DFLAGS = -O -I..\imports
 LIBS = glfwdll.lib glu32.lib opengl32.lib
 
 
-all: triangle.exe splitview.exe
+all: boing.exe gears.exe particles.exe splitview.exe triangle.exe
 
 
 clean:
 	del *.exe *.obj *.map
 
 
-triangle.exe: triangle.d
+boing.exe: boing.d
+	$(DC) $(DFLAGS) -of$@ $<d $(LIBS)
+
+gears.exe: gears.d
+	$(DC) $(DFLAGS) -of$@ $<d $(LIBS)
+
+particles.exe: particles.d
 	$(DC) $(DFLAGS) -of$@ $<d $(LIBS)
 
 splitview.exe: splitview.d
+	$(DC) $(DFLAGS) -of$@ $<d $(LIBS)
+
+triangle.exe: triangle.d
 	$(DC) $(DFLAGS) -of$@ $<d $(LIBS)
