Temporary work around for include path bug in Pelles C, plus addition of new /IMPLIB flag for POLINK.

--- a/lib/win32/Makefile.win32.pellesc
+++ b/lib/win32/Makefile.win32.pellesc
@@ -4,7 +4,7 @@
 # To compile GLFW using this makefile, run:
 #  pomake /F Makefile.win32.pellesc
 #-------------------------------------------------------------------------
-# $Id: Makefile.win32.pellesc,v 1.1 2004-04-05 20:18:14 marcus256 Exp $
+# $Id: Makefile.win32.pellesc,v 1.2 2004-04-07 21:00:50 marcus256 Exp $
 ##########################################################################
 
 ##########################################################################
@@ -17,18 +17,18 @@ default: glfw.lib glfw.dll
 # GLFW version
 ##########################################################################
 VERMAJOR = 2
-VERMINOR = 4
+VERMINOR = 5
 
 
 ##########################################################################
 # Compiler settings
 ##########################################################################
 CC         = cc
-CFLAGS     = /c /Os /I. /I.. /Ze
+CFLAGS     = /c /Os /I. /I.. /I..\..\include\GL /Ze
 CFLAGS_DLL = $(CFLAGS) /DGLFW_BUILD_DLL
 
 # Some modules should be optimized for speed (e.g. image decoding)
-CFLAGS_SPEED     = /c /Ot /I. /I.. /Ze
+CFLAGS_SPEED     = /c /Ot /I. /I.. /I..\..\include\GL /Ze
 CFLAGS_SPEED_DLL = $(CFLAGS_SPEED) /DGLFW_BUILD_DLL
 
 
@@ -41,7 +41,7 @@ LIBFLAGS  =
 
 # DLL
 LINK      = polink
-LINKFLAGS = /DLL /RELEASE /DEF:glfwdll_pellesc.def
+LINKFLAGS = /DLL /RELEASE /DEF:glfwdll_pellesc.def /IMPLIB:glfwdll.lib
 LINKLIBS  = opengl32.lib user32.lib kernel32.lib
 
 
@@ -108,10 +108,7 @@ glfw.lib: $(OBJS)
 # Rule for building dynamic library
 ##########################################################################
 glfw.dll: $(DLLOBJS)
-	rename glfw.lib glfw_old.lib
 	$(LINK) $(LINKFLAGS) /OUT:$@ $(DLLOBJS) $(LINKLIBS)
-	rename glfw.lib glfwdll.lib
-	rename glfw_old.lib glfw.lib
 
 
 ##########################################################################
