--- a/examples/Makefile.macosx.gcc
+++ b/examples/Makefile.macosx.gcc
@@ -4,7 +4,7 @@
 # To compile the test files using this makefile, run:
 #  make -f Makefile.macosx.gcc
 #-------------------------------------------------------------------------
-# $Id: Makefile.macosx.gcc,v 1.6 2007-03-15 03:20:19 elmindreda Exp $
+# $Id: Makefile.macosx.gcc,v 1.7 2007-03-15 03:36:20 elmindreda Exp $
 ##########################################################################
 
 # Compiler settings
@@ -30,64 +30,64 @@ all: Triangle.app/Contents/MacOS/GLFWApplication \
 
 # Rule for triangle
 Triangle.app/Contents/MacOS/GLFWApplication: triangle.c
-	/bin/sh MakeBundle.sh Triangle
+	/bin/sh bundle.sh Triangle
 	$(CC) $(CFLAGS) triangle.c $(LFLAGS) -o Triangle.app/Contents/MacOS/Triangle
 
 # Rule for listmodes
 ListModes.app/Contents/MacOS/GLFWApplication: listmodes.c
-	/bin/sh MakeBundle.sh ListModes
+	/bin/sh bundle.sh ListModes
 	$(CC) $(CFLAGS) listmodes.c $(LFLAGS) -o ListModes.app/Contents/MacOS/ListModes
 
 # Rule for mthello
 MTHello.app/Contents/MacOS/GLFWApplication: mthello.c
-	/bin/sh MakeBundle.sh MTHello
+	/bin/sh bundle.sh MTHello
 	$(CC) $(CFLAGS) mthello.c $(LFLAGS) -o MTHello.app/Contents/MacOS/MTHello
 
 # Rule for pong3d
 Pong3D.app/Contents/MacOS/GLFWApplication: pong3d.c
-	/bin/sh MakeBundle.sh Pong3D
+	/bin/sh bundle.sh Pong3D
 	cp pong3d_*.tga Pong3D.app/Contents/Resources/
 	$(CC) $(CFLAGS) pong3d.c $(LFLAGS) -o Pong3D.app/Contents/MacOS/Pong3D
 
 # Rule for mtbench
 MTBench.app/Contents/MacOS/GLFWApplication: mtbench.c
-	/bin/sh MakeBundle.sh MTBench
+	/bin/sh bundle.sh MTBench
 	$(CC) $(CFLAGS) mtbench.c $(LFLAGS) -o MTBench.app/Contents/MacOS/MTBench
 
 # Rule for particles
 Particles.app/Contents/MacOS/GLFWApplication: particles.c
-	/bin/sh MakeBundle.sh Particles
+	/bin/sh bundle.sh Particles
 	$(CC) $(CFLAGS) particles.c $(LFLAGS) -o Particles.app/Contents/MacOS/Particles
 
 # Rule for splitview
 SplitView.app/Contents/MacOS/GLFWApplication: splitview.c
-	/bin/sh MakeBundle.sh SplitView
+	/bin/sh bundle.sh SplitView
 	$(CC) $(CFLAGS) splitview.c $(LFLAGS) -o SplitView.app/Contents/MacOS/SplitView
 
 # Rule for mipmaps
 Mipmaps.app/Contents/MacOS/GLFWApplication: mipmaps.c
-	/bin/sh MakeBundle.sh Mipmaps
+	/bin/sh bundle.sh Mipmaps
 	cp mipmaps.tga Mipmaps.app/Contents/Resources/
 	$(CC) $(CFLAGS) mipmaps.c $(LFLAGS) -o Mipmaps.app/Contents/MacOS/Mipmaps
 
 # Rule for keytest
 KeyTest.app/Contents/MacOS/GLFWApplication: keytest.c
-	/bin/sh MakeBundle.sh KeyTest
+	/bin/sh bundle.sh KeyTest
 	$(CC) $(CFLAGS) keytest.c $(LFLAGS) -o KeyTest.app/Contents/MacOS/KeyTest
 
 # Rule for gears
 Gears.app/Contents/MacOS/GLFWApplication: gears.c
-	/bin/sh MakeBundle.sh Gears
+	/bin/sh bundle.sh Gears
 	$(CC) $(CFLAGS) gears.c $(LFLAGS) -o Gears.app/Contents/MacOS/Gears
 
 # Rule for boing
 Boing.app/Contents/MacOS/GLFWApplication: boing.c
-	/bin/sh MakeBundle.sh Boing
+	/bin/sh bundle.sh Boing
 	$(CC) $(CFLAGS) boing.c $(LFLAGS) -o Boing.app/Contents/MacOS/Boing
 
 # Rule for wave
 Wave.app/Contents/MacOS/GLFWApplication: wave.c
-	/bin/sh MakeBundle.sh Wave
+	/bin/sh bundle.sh Wave
 	$(CC) $(CFLAGS) wave.c $(LFLAGS) -o Wave.app/Contents/MacOS/Wave
 
 
