--- a/examples/Makefile.win32.cross-mgw
+++ b/examples/Makefile.win32.cross-mgw
@@ -4,14 +4,15 @@
 # To compile the test files using this makefile, run:
 #  make -f Makefile.win32.cross-mgw
 #-------------------------------------------------------------------------
-# $Id: Makefile.win32.cross-mgw,v 1.1 2007-03-30 20:17:42 elmindreda Exp $
+# $Id: Makefile.win32.cross-mgw,v 1.2 2007-03-30 20:27:00 elmindreda Exp $
 ##########################################################################
 
 TARGET ?= i586-mingw32msvc-
 
 # Compiler settings
 CC     = gcc
-CFLAGS = "-DWINAPI=__stdcall" -I../include -Wall -O3 -ffast-math
+CFLAGS = -I../include -Wall -O3 -ffast-math
+#CFLAGS = "-DWINAPI=__stdcall" -I../include -Wall -O3 -ffast-math
 #CFLAGS = -I../include -Wall -O3 -ffast-math -DGLFW_DLL
 
 # Linker settings
