Update built process to use -pthread when available The .so now depends on external libraries which allow linking to libglfw.so only instead of linking to libglfw.so and OpenGL.
Tested under linux.

--- a/lib/x11/Makefile.x11.in
+++ b/lib/x11/Makefile.x11.in
@@ -105,7 +105,7 @@ libglfw.a: $(STATIC_OBJS)
 # Rule for building shared library
 ##########################################################################
 libglfw.so: $(SHARED_OBJS)
-	$(LD) $(LDFLAGS) -o $@ $(SHARED_OBJS)
+	$(CC) $(LDFLAGS) -o $@ $(SHARED_OBJS) $(LFLAGS) $(LIBS)
 
 
 ##########################################################################
