--- a/lib/x11/Makefile.x11.in
+++ b/lib/x11/Makefile.x11.in
@@ -34,6 +34,19 @@ install: libglfw.a libglfw.pc
 
 
 ##########################################################################
+# Install GLFW static and shared libraries
+##########################################################################
+distro-install: libglfw.a libglfw.so libglfw.pc
+	$(INSTALL) -d $(PREFIX)/lib
+	$(INSTALL) -c -m 644 libglfw.a $(PREFIX)/lib/libglfw.a
+	$(INSTALL) -c -m 644 libglfw.so $(PREFIX)/lib/libglfw.so
+	$(INSTALL) -d $(PREFIX)/include/GL
+	$(INSTALL) -c -m 644 ../../include/GL/glfw.h $(PREFIX)/include/GL/glfw.h
+	$(INSTALL) -d $(PREFIX)/lib/pkgconfig
+	$(INSTALL) -c -m 644 libglfw.pc $(PREFIX)/lib/pkgconfig/libglfw.pc
+
+
+##########################################################################
 # Object files which are part of the GLFW library
 ##########################################################################
 STATIC_OBJS = \
