Added initial pkgconfig support.

--- a/lib/x11/CMakeLists.txt
+++ b/lib/x11/CMakeLists.txt
@@ -2,6 +2,10 @@ configure_file(
     ${CMAKE_CURRENT_SOURCE_DIR}/x11_config.h.cmake 
     ${CMAKE_CURRENT_BINARY_DIR}/x11_config.h @ONLY)
 
+configure_file(
+    ${CMAKE_CURRENT_SOURCE_DIR}/libglfw.pc.cmake 
+    ${CMAKE_CURRENT_BINARY_DIR}/libglfw.pc @ONLY)
+
 include_directories(
     ${CMAKE_CURRENT_BINARY_DIR}
     ${CMAKE_CURRENT_SOURCE_DIR} 
@@ -28,4 +32,5 @@ set_target_properties(libglfwStatic libglfwShared PROPERTIES
 )
 
 install(TARGETS libglfwStatic libglfwShared DESTINATION lib)
+install(FILES ${CMAKE_CURRENT_BINARY_DIR}/libglfw.pc DESTINATION lib/pkgconfig)
 
