--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -18,7 +18,7 @@ add_executable(listmodes listmodes.c)
 #add_executable(mimaps WIN32 mimaps.c)
 #add_executable(mtbench mtbench.c)
 #add_executable(mthello mthello.c)
-add_executable(particles WIN32 particles.c)
+#add_executable(particles WIN32 particles.c)
 #add_executable(pong3d WIN32 pong3d.c)
 add_executable(splitview WIN32 splitview.c)
 add_executable(triangle WIN32 triangle.c)
