Removed stuff, updated for Cygwin, fixes.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,7 +35,7 @@ endif (WIN32)
 
 
 # Deal with Unix Specifics (Not MacOS/X) 
-if (UNIX AND NOT APPLE)
+if (UNIX AND NOT APPLE AND NOT CYGWIN)
     set(CMAKE_REQUIRED_LIBRARIES ${X11_X11_LIB} ${OPENGL_gl_LIBRARY})
     list(APPEND GLFW_INCLUDE_DIR ${X11_X11_INCLUDE_PATH})
     list(APPEND GLFW_LIBRARIES ${X11_X11_LIB})
@@ -68,7 +68,7 @@ if (UNIX AND NOT APPLE)
     CHECK_FUNCTION_EXISTS(glXGetProcAddressEXT _GLFW_HAS_GLXGETPROCADDRESSEXT)
 
     add_subdirectory(lib/x11)
-endif(UNIX AND NOT APPLE)
+endif(UNIX AND NOT APPLE AND NOT CYGWIN)
 
 # Deal with MacOSX Specifics 
 if (UNIX AND APPLE)
