--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -11,8 +11,8 @@ link_libraries(libglfwStatic
 #add_definitions(-DGLFW_DLL)
 include_directories(${CMAKE_SOURCE_DIR}/include ${OPENGL_INCLUDE_DIR})
 
-add_executable(boing WIN32 boing.c)
-add_executable(gears WIN32 gears.c)
+add_executable(boing WIN32 MACOSX_BUNDLE boing.c)
+add_executable(gears WIN32 MACOSX_BUNDLE gears.c)
 add_executable(keytest keytest.c)
 add_executable(listmodes listmodes.c)
 #add_executable(mimaps WIN32 mimaps.c)
@@ -20,6 +20,7 @@ add_executable(listmodes listmodes.c)
 #add_executable(mthello mthello.c)
 #add_executable(particles WIN32 particles.c)
 #add_executable(pong3d WIN32 pong3d.c)
-add_executable(splitview WIN32 splitview.c)
-add_executable(triangle WIN32 triangle.c)
-add_executable(wave WIN32 wave.c)
+add_executable(splitview WIN32 MACOSX_BUNDLE splitview.c)
+add_executable(triangle WIN32 MACOSX_BUNDLE triangle.c)
+add_executable(wave WIN32 MACOSX_BUNDLE wave.c)
+
