--- a/lib/win32/libglfw.pc.in
+++ b/lib/win32/libglfw.pc.in
@@ -7,5 +7,5 @@ Name: GLFW
 Description: A portable framework for OpenGL development
 Version: 2.6.1
 URL: http://glfw.sourceforge.net/
-Libs: -L${libdir} -lglfw -lglu32 -lopengl32 -lm -s -mwindows -e _mainCRTStartup
+Libs: -L${libdir} -lglfw -lglu32 -lopengl32 -lm
 Cflags: -I${includedir} -mwin32
