--- a/lib/win32/CMakeLists.txt
+++ b/lib/win32/CMakeLists.txt
@@ -1,4 +1,4 @@
-include_directories(${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_SOURCE_DIR}/lib)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/..)
 SET(libglfw_SOURCES
     ${common_SOURCES}
     win32_enable.c 
