--- a/lib/x11/CMakeLists.txt
+++ b/lib/x11/CMakeLists.txt
@@ -9,7 +9,7 @@ configure_file(
 include_directories(
     ${CMAKE_CURRENT_BINARY_DIR}
     ${CMAKE_CURRENT_SOURCE_DIR} 
-    ${CMAKE_SOURCE_DIR}/lib 
+    ${CMAKE_CURRENT_SOURCE_DIR}/.. 
     ${GLFW_INCLUDE_DIR})
 
 set(libglfw_SOURCES
